--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home page</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -24,7 +24,7 @@
           <div class="cover-left">
             <h1>This website is awesome</h1>
             <p>This website has some subtext that goes under the main title. It's smaller font and the color is lower contrast</p>
-            <button class="cover-button">Sign up</button>
+            <button class="cover-button">Order now</button>
           </div>
           <div><img class="cover-img" src="hoodie_white.jpeg" alt="white hoodie" width="100px" height="80px"></div>
         </section>
